z-indexes is fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,14 +119,12 @@ body {
   width: 1160px;
   margin: 0 auto;
   background-color: rgba(255, 225, 127, 1);
-  z-index: -2;
 }
 
 .inner-header {
   width: 1160px;
   margin: 0 auto;
   background-color: rgba(255, 225, 127, 1);
-  z-index: -2;
 }
 
 .logo {
@@ -353,7 +351,6 @@ body {
   left: 0;
   margin: auto;
   fill: rgba(0, 0, 0, 1);
-  z-index: -1;
 }
 
 /* корзина */
@@ -379,6 +376,7 @@ body {
   text-align: center;
   line-height: 21px;
   font-size: 14px;
+  z-index: 1;
 }
 
 /* состояния для сравнить и корзина */
@@ -422,7 +420,7 @@ body {
   color: rgba(255, 255, 255, 1);
   background-color: rgba(0, 0, 0, 1);
   min-height: 90px;
-  display: none;
+  /* display: none; */
 }
 
 .popover::after {
@@ -1249,11 +1247,11 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  /* display: flex; */
+  display: none;
   width: 100%;
   height: 100%;
   background-color: rgba(240, 240, 240, 0.9);
-  display: none;
+  z-index: 2;
 }
 
 .rare {
@@ -1264,7 +1262,6 @@ body {
   border: 10px solid rgba(0, 0, 0, 1);
   box-shadow: 0 10px rgba(0, 0, 0, 0.1);
   background-color: rgba(255, 255, 255, 1);
-  z-index: 0;
 }
 
 .rare-form {
